infrastructure/kubernetes/app/longhorn-manifests/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: longhorn
    namespace: longhorn-system
spec:
    parentRefs:
        - group: gateway.networking.k8s.io
          kind: Gateway
          name: traefik
          namespace: default
          sectionName: https
    hostnames:
        - longhorn.lan
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          filters:
              - type: ExtensionRef
                extensionRef:
                    group: traefik.io
                    kind: Middleware
                    name: oauth2-proxy-auth
          backendRefs:
              - group: ""
                kind: Service
                name: longhorn-frontend
                port: 80
                weight: 1
